# eth-gd

./: LICENSE  README.md
godot/: .gitignore  icon.svg.import  main.gd  main.tscn  project.godot
godot/addons/eth-gd/: big-number.gd  contract.gd  entry.gd  eth-logo.svg.import  eth_logo.svg.import  plugin.cfg
godot/addons/eth-gd/client/: client.gd
godot/addons/eth-gd/contract/: contract.gd
godot/addons/eth-gd/contract/utils/: abi-encoder.gd  abi_encoder.gd  abi_formatter.gd
godot/addons/eth-gd/examples/: big-number.tscn  big_number.gd  big_number.tscn  client.tscn  contract.gd  contract.tscn
godot/addons/eth-gd/utils/: big-number.gd  eth_utils.gd
godot/addons/keccak256/: entry.gd  keccak256.gd  plugin.cfg
godot/eth-gd/: big-number.gd  client.gd
godot/examples/: client.tscn  contract.tscn
rust/: Cargo.toml
rust/src/: big_number.rs  keccak256.rs  lib.rs
