[package]
name = "eth-gd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ethereum-types = "0.14.1"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
tiny-keccak = { version = "2.0", features = ["keccak"] }
